k8s 部署文件（腾讯云）（2023-03-06更新）/all/ingressHTTPS/ingressHTTPS.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  labels:
#    app: nginx-myapp-deploy
#  name: nginx-myapp
#spec:
#  replicas: 2
#  selector:
#    matchLabels:
#      app: nginx-myapp
#  template:
#    metadata:
#      labels:
#        app: nginx-myapp
#    spec:
#      containers:
#      - name: nginx
#        image: ikubernetes/myapp:v1
#        imagePullPolicy: IfNotPresent
#        ports:
#        - containerPort: 80
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-svc
#spec:
#  ports:
#  - port: 80
#    targetPort: 80
#    protocol: TCP
#  selector:
#    app: nginx-myapp
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test-https
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - tls.ykingress.com
      secretName: tls-secret
  rules:
  - host: tls.ykingress.com
    http:
      paths:
      - path: /
        backend:
          service: 
            name: nginx-svc
            port:
              number: 80
        pathType: Prefix
